Feb 07, 2012 - chris ---------------------------------------------------
o fixed bug where HAM_ONLY_DUPLICATES was ignored when used in a
	Transaction (thanks, Mark Ruijter from lessfs)

Feb 06, 2012 - chris ---------------------------------------------------
o added a public macro HAM_API_REVISION to allow users to programmatically
    distinguish between new and old interface of ham_txn_begin
o win32: fixed build issue if HAM_DISABLE_COMPRESSION is defined (thanks,
    Andy Thalmann (http://www.softdev.ch))

Feb 05, 2012 - chris ---------------------------------------------------
o the device structure (ham_device_t) was C++-ified; if you use 
    ham_env_set_device then you will have to change your code
o fixed wrong version check when loading databases from 1.1.x 
o now using the native Win32 API for os_pwrite and os_pread (thanks,
    Andy Thalmann (http://www.softdev.ch))
o added new parameter HAM_PARAM_LOG_DIRECTORY to specify the directory
    where the log file and the journal files are stored

Jan 19, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0
o Changed interface ham_txn_begin, also for Wrapper APIs

Jan 05, 2012 - chris ---------------------------------------------------
o when recovery or transactions are enabled then for most operations the 
    physical log is no longer required; this reduces I/O and improves 
    performance

Dec 14, 2011 - chris ---------------------------------------------------
o dotnet: integrated the files, updated the interface

Dec 11, 2011 - chris ---------------------------------------------------
o java: integrated the files, updated the interface
o wince: moved to /contrib directory

Nov 26, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0rc3

Nov 20, 2011 - chris ---------------------------------------------------
o improved performance for duplicates, transactions and cursors
